--- a/tut4/q1.html
+++ b/tut4/q1.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MOD-1</title>
+</head>
+<body>
+    <h1 align="center"> Image Searching Website</h1>
+    <hr>
+    <form action="">
+        <label for="">Search your Image here :</label>
+        <input type="search"/>
+        <input type="submit" alt="sumbit" value="search">
+        <br>
+        <br>
+        <br>
+        <a href="">For more click here : </a>
+        <hr>
+        <p>Feedback Form :</p>
+        <label for="name">Name : </label>
+        <br>
+        <input type="text" alt="name"/>
+        <br>
+        <label for="">Date :</label>
+        <br>
+        <input type="date"/>
+        <br>
+        <label for="comment">Comment : </label>
+        <br>
+        <textarea name="comment" id="comment" rows="10" cols="50"></textarea>
+        <br><br>
+        <input type="submit" value="Submit">
 
+    </form>
+    
+</body>
+</html>
