--- a/tut4/q2.html
+++ b/tut4/q2.html
@@ -1,1 +1,59 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MOD-2</title>
+</head>
+<body>
+    <form action="">
+        <label for="firstname">Firstname</label>
+        <input type="text" name="firstname" id="firstname"/>
+        <br>
+        <br>
+        <label for="middlename">Middlename</label>
+        <input type="text" name="middlename" id="middlename"/>
+        <br><br>
+        <label for="lastname">Lastname</label>
+        <input type="text" name="lastname" />
+        <br><br>
+        <label for="course">Course:</label>
+        <select name="course" id="course">
+            <option value=""  selected>Course</option>
+            <option value="BBA">BBA</option>
+            <option value="BCA">BCA</option>
+            <option value="B.TECH">B.TECH</option>
+            <option value="MBA">MBA</option>
+            <option value="MCA">MCA</option>
+            <option value="M.TECH">M.TECH</option>
+        </select>
+        <br>
+        <label for="">Gender : </label>
+        <br>
+        <input type="radio" value="Male"/>Male
+        <br>
+        <input type="radio" value="Female"/>Female
+        <br>
+        <input type="radio" value="Other"/>Other
+        <br>
+        <label for="">Phone : </label>
+        <input type="" value="+91" size="2"/>
+        <input type="tel"/>
+        <br><br>
+        <label for="">Address </label>
+        <br>
+        <textarea name="" id="" rows="10" cols="50"></textarea>
+        <br><br>
+        <label for="">Email :</label>
+        <input type="email"/>
+        <br><br>
+        <label for="">Password : </label>
+        <input type="password"/>
+        <br><br>
+        <label for="">Re-type Password : </label>
+        <input type="password"/>
+        <br><br>
+        <input type="submit" value="Submit"/>
+    </form>
+</body>
+</html>
