--- a/tutorial7/q4.html
+++ b/tutorial7/q4.html
@@ -24,10 +24,10 @@
 <body>
 
 
-<p class="style1">This is a paragraph with Style 1: blue color, right aligned, underlined, italic font, and 2cm word spacing.</p>
+<p class="style1">paragraph with Style 1: blue color, right aligned, underlined, italic font, and 2cm word spacing.</p>
 
 
-<p class="style2">This is a paragraph with Style 2: yellow background, dashed blue border, and 1.5cm padding.</p>
+<p class="style2">paragraph with Style 2: yellow background, dashed blue border, and 1.5cm padding.</p>
 
 </body>
 </html>
